# v3ssdk

./: .gitmodules  README.md  build.sh  docker.sh  linux_docker_build.sh  make.sh
app/cam4g/: Makefile  main.c  main.cpp  pushpic.c  pushpic.cpp  pushpic.h  saveppic.cpp
app/curl/: main.c
app/demo-camera/: cvtcolor.c  demo-camera.c
app/demo-codec/: VideoTest.c  demo-camera.c
app/demo-qt/: camthread.cpp  camthread.h  detectthread.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  ui_mainwindow.h  untitled.pro
app/facedetapp/: camthread.cpp  camthread.h  detectthread.cpp  detectthread.h  faceregrequest.cpp  faceregrequest.h  gpio.h  main.cpp  mainwindow.cpp  mainwindow.h  moc_camthread.cpp  moc_detectthread.cpp  moc_mainwindow.cpp  untitled.pro
app/facedetapp/Common/: Common.c  Common.h  Common_nh_type.h
app/facedetapp/Communiction/: Communiction.c  Communiction.h
app/facenet/: CMakeLists.txt
app/facenet/src/: main.cpp  mtcnn.cpp
app/libfacedetection/: CMakeLists.txt
app/ncnn/: CMakeLists.txt
app/opencv/: test.cpp
app/qrcode/: ui_mainwindow.h
app/zbar/: Makefile  test.cpp
config/: ar0330_mipi_vga.c  sys_config_480x272lcd.fex
configs/: mangopi_defconfig
patch/: ar0330_mipi_480272.c  ar0330_mipi_720p.c
patch/cam4g/: appstart.sh  ar0330_mipi.c  cambuild.sh  install.sh  linux_config  sys_config.fex
patch/nanhong/: linux_config  nhbuild.sh  sys_config.fex
patch/standard/: build.sh  linux_config  sdio_sif_esp.c  sys_config.fex
prebuilt/rootfs-override/etc/: hostapd.conf  inittab  profile  udhcpd.conf
tools/pack/: pack
(+12 files in other folders)
